add tailwind, rewrite some part of landing page to mobile

--- a/src/assets/styles/icons.scss
+++ b/src/assets/styles/icons.scss
@@ -112,6 +112,12 @@
   height: 20px;
 }
 
+.close-cross-white-24 {
+  background: url("/assets/svg/close-cross-white-24.svg");
+  width: 24px;
+  height: 24px;
+}
+
 .close-circle-24 {
   background: url("/assets/svg/close-circle.svg");
   width: 24px;
@@ -326,4 +332,10 @@
   background: url("/assets/svg/men-with-flower.svg");
   width: 91px;
   height: 83px;
+}
+
+.hamburger-menu-white-icon-24 {
+  background: url("/assets/svg/hamburger-menu-icon.svg");
+  width: 24px;
+  height: 24px;
 }
