--- a/src/shared/layout/landing-layout/connect-now-layout/connect-now-layout.component.html
+++ b/src/shared/layout/landing-layout/connect-now-layout/connect-now-layout.component.html
@@ -1,6 +1,8 @@
 <div>
-  <div class="connect-now-block flex flex-col items-center justify-center rounded-l">
-    <div class="connect-now-block__text-block white-text">
+  <div
+    class="connect-now-block flex flex-col items-center justify-center rounded-l mt-[64px] mx-[140px] mobile:mx-4 mb-[160px] h-[336px] lg-tablet:h-[406px] tablet:h-[436px] mobile:h-[468px]"
+  >
+    <div class="my-0 mx-[140px] tablet:mx-[32px] mobile:mx-auto white-text">
       <h3 class="medium text-center mt-0 mb-0">Smarti</h3>
       <h3 class="medium text-center mt-0 mb-0">חוסכת לכם זמן וכסף ועוזרת לכם לארגן את קופות הפנסיה והביטוח בארגון</h3>
       <h3 class="medium text-center mt-0 mb-8">ויש מבצע חודש מתנה</h3>
