--- a/src/shared/layout/landing-layout/connect-now-layout/connect-now-layout.component.scss
+++ b/src/shared/layout/landing-layout/connect-now-layout/connect-now-layout.component.scss
@@ -1,9 +1,4 @@
 .connect-now-block {
-  margin: 64px 140px 0;
   background: url("/assets/img/gradient-rounded.png");
-  height: 336px;
-
-  &__text-block {
-    margin: 0 138px;
-  }
+  background-size: cover;
 }
