--- a/src/shared/layout/landing-layout/landing-layout.component.html
+++ b/src/shared/layout/landing-layout/landing-layout.component.html
@@ -1,19 +1,19 @@
 <smarti-main-banner-layout #banner></smarti-main-banner-layout>
-<smarti-about-layout #about></smarti-about-layout>
+<!--<smarti-about-layout #about></smarti-about-layout>-->
 <smarti-start-day-with-smarti-layout></smarti-start-day-with-smarti-layout>
 <smarti-connect-now-layout></smarti-connect-now-layout>
-<smarti-company-slider-layout></smarti-company-slider-layout>
+<!--<smarti-company-slider-layout></smarti-company-slider-layout>-->
 <smarti-run-business-layout></smarti-run-business-layout>
 <smarti-employee-management-layout></smarti-employee-management-layout>
 <!--<smarti-blog-layout #blog></smarti-blog-layout>-->
 <smarti-questions-banner-layout></smarti-questions-banner-layout>
-<div>
+<div class="lt-lg-tablet:hidden">
   <smarti-main-layout-popup
     [direction]="'left'"
     class="fixed left-landing-popup"
   ></smarti-main-layout-popup>
 </div>
-<div>
+<div class="lt-lg-tablet:hidden">
   <smarti-main-layout-popup
     [direction]="'right'"
     class="fixed right-landing-popup"
