--- a/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.html
+++ b/src/shared/layout/landing-layout/main-banner-layout/main-banner-layout.component.html
@@ -3,12 +3,12 @@
   id="banner"
   class="relative"
 >
-  <div class="main-banner flex justify-center items-center">
-    <div class="main-banner__block">
-      <div class="main-banner__block__text text-center display-text white-text">
+  <div class="main-banner w-[100%] gt-tablet:h-[640px] flex justify-center items-center">
+    <div class="gt-tablet:my-[168px] my-[84px] mx-auto">
+      <div class="gt-tablet:w-[780px] lt-lg-tablet:mx-6 text-center display-text white-text">
         סליקה פנסיונית חכמה דואגים לשקט שלך
       </div>
-      <div class="main-banner__block__interaction">
+      <div class="mt-[72px] mx-auto mb-0 w-[232px]">
         <smarti-button
           [text]="'הרשמה מהירה'"
           [typeClass]="'interaction'"
