--- a/src/shared/layout/landing-layout/start-day-with-smarti-layout/start-day-with-smarti-layout.component.scss
+++ b/src/shared/layout/landing-layout/start-day-with-smarti-layout/start-day-with-smarti-layout.component.scss
@@ -1,18 +1,7 @@
-.start-day {
-  margin: 76px 140px 0 245px;
-
-  &__text {
-    width: 674px;
-    height: 96px;
-  }
-}
-
 .happy-user-img {
   background: url("/assets/img/happy-user.png");
-  width: 610px;
-  height: 676px;
+  background-size: cover;
 }
-
 
 .mask-group-97 {
   background: url("/assets/img/mask-group-97.png");
