--- a/src/shared/layout/landing-layout/employee-management-layout/employee-management-layout.component.html
+++ b/src/shared/layout/landing-layout/employee-management-layout/employee-management-layout.component.html
@@ -1,46 +1,48 @@
-<div class="mt-104">
-  <div class="smarti-heading-text bright-turquoise-text-500">רוצים לייעל את ניהול העובדים שלכם?</div>
-  <div class="smarti-describing-text white-text">
+<div class="mt-[104px] mb-[160px] sm-desktop:mb-[120px] lg-tablet:mb-[80px]">
+  <div class="smarti-heading-text mx-auto bright-turquoise-text-500">רוצים לייעל את ניהול העובדים שלכם?</div>
+  <div class="smarti-describing-text my-0 mx-auto white-text">
     <div class="dir-rtl">כל הכלים המתאימים שיאפשרו לכם</div>
     <div>ניהול משאבי אנוש בתהליכים דיגיטליים מתקדמים ביותר</div>
   </div>
-  <div class="flex justify-center gap-171px">
-    <div class="employee-management-left">
+  <div class="flex flex-row lt-lg-tablet:flex-col justify-around">
+    <div class="mt-[168px] lt-lg-tablet:mx-auto">
       <div
-        class="employee-management-left__item flex gap-136px rounded-l border-neutrals-800 bg-neutrals-900 cursor-pointer"
+        class="w-[674px] sm-desktop:w-[600px] lg-tablet:w-[520px] mobile:w-full h-[88px] hover:opacity-90 flex gap-[136px] mobile:gap-2 rounded-l border-neutrals-800 bg-neutrals-900 cursor-pointer"
         (click)="openLeadsDialog(firstLeadsDialogTemplate)"
       >
-        <div class="employee-management-left__item__button flex justify-center rounded-m bg-pumpkin-400">
+        <div class="w-[124px] h-[56px] my-4 ml-4 mr-0 flex justify-center rounded-m bg-pumpkin-400">
           <div class="send-icon-28 self-center"></div>
         </div>
-        <h4 class="employee-management-left__item__text dir-rtl medium white-text">
+        <h4 class="mobile:w-full h-[71px] my-2 ml-0 mr-8 dir-rtl medium white-text">
           שליחת טפסי 101 ישירות לעובדים לנייד
         </h4>
       </div>
 
       <div
-        class="employee-management-left__item flex gap-136px rounded-l border-neutrals-800 bg-neutrals-900 mt-20 cursor-pointer"
+        class="w-[674px] sm-desktop:w-[600px] lg-tablet:w-[520px] mobile:w-full h-[88px] hover:opacity-90 flex gap-[136px] mobile:gap-2 rounded-l border-neutrals-800 bg-neutrals-900 mt-20 cursor-pointer"
         (click)="openLeadsDialog(secondLeadsDialogTemplate)"
       >
-        <div class="employee-management-left__item__button flex justify-center rounded-m bg-pumpkin-400">
+        <div class="w-[124px] h-[56px] my-4 ml-4 mr-0 flex justify-center rounded-m bg-pumpkin-400">
           <div class="send-icon-28 self-center"></div>
         </div>
-        <h4 class="employee-management-left__item__text dir-rtl medium white-text">
+        <h4 class="mobile:w-full h-[71px] my-2 ml-0 mr-8 dir-rtl medium white-text">
           אפשרות בחירת מוצר פנסיוני על ידי העובד
         </h4>
       </div>
 
       <div
-        class="employee-management-left__item flex gap-136px rounded-l border-neutrals-800 bg-neutrals-900 mt-20 cursor-pointer"
+        class="w-[674px] sm-desktop:w-[600px] lg-tablet:w-[520px] mobile:w-full h-[88px] hover:opacity-90 flex gap-[136px] mobile:gap-2 rounded-l border-neutrals-800 bg-neutrals-900 mt-20 cursor-pointer"
         (click)="openLeadsDialog(thirdLeadsDialogTemplate)"
       >
-        <div class="employee-management-left__item__button flex justify-center rounded-m bg-pumpkin-400">
+        <div class="w-[124px] h-[56px] my-4 ml-4 mr-0 flex justify-center rounded-m bg-pumpkin-400">
           <div class="send-icon-28 self-center"></div>
         </div>
-        <h4 class="employee-management-left__item__text dir-rtl medium white-text">העלאת תלושי שכר לכלל העובדים</h4>
+        <h4 class="mobile:w-full h-[71px] my-2 ml-0 mr-8 dir-rtl medium white-text">העלאת תלושי שכר לכלל העובדים</h4>
       </div>
     </div>
-    <div class="employee-management-right"></div>
+    <div
+      class="lt-lg-tablet:mx-auto mobile:w-[350px] mobile:h-[350px] happy-man-image mt-[96px] sm-desktop:mt-[136px] lg-tablet:mt-[176px] w-[640px] h-[640px] sm-desktop:w-[500px] sm-desktop:h-[500px] lg-tablet:w-[420px] lg-tablet:h-[420px]"
+    ></div>
   </div>
 </div>
 
