--- a/src/shared/layout/landing-layout/footer/footer.component.html
+++ b/src/shared/layout/landing-layout/footer/footer.component.html
@@ -1,12 +1,35 @@
-<div class="footer">
-  <div class="flex flex-row mt-5 mb-8 gap-225px">
-    <div class="logo-big-h33"></div>
-    <div class="footer-link-text dir-rtl white-text ml-150 self-end">צרו קשר</div>
-    <div class="footer-link-text dir-rtl white-text self-end">תמיכה</div>
-    <div class="footer-link-text dir-rtl white-text self-end">פתרונות</div>
+<div class="lt-lg-tablet:hidden relative my-0 gt-sm-desktop:mx-[140px] sm-desktop:mx-[100px] lg-tablet:mx-[50px]">
+  <div class="flex flex-row mt-5 mb-8 gap-[225px] sm-desktop:gap-[150px] lg-tablet:gap-[100px]">
+    <div
+      class="logo-big-h33"
+      (click)="navigateToPageWithoutAnchor(mainLink)"
+    ></div>
+    <div
+      class="footer-link-text dir-rtl white-text gt-sm-desktop:ml-150 sm-desktop:ml-[100px] lg-tablet:ml-8 self-end"
+      (click)="navigateToPageWithoutAnchor(contactLink)"
+    >
+      צרו קשר
+    </div>
+    <div
+      class="footer-link-text dir-rtl white-text self-end"
+      smartiScrollAnchor="banner"
+      (click)="navigateToPageWithAnchor(mainLink, 'banner')"
+    >
+      אודות
+    </div>
+    <div
+      class="footer-link-text dir-rtl white-text self-end"
+      smartiScrollAnchor="about"
+      (click)="navigateToPageWithAnchor(mainLink, 'about')"
+    >
+      פתרונות
+    </div>
   </div>
+  <div class="absolute text-white paragraph-text-medium right-2 top-2">Ver {{ version }}</div>
 </div>
-<div class="relative bg-neutrals-20 mb-5 flex flex-row justify-center gap-150px h-15">
+<div
+  class="lt-lg-tablet:hidden bg-neutrals-20 mb-5 flex flex-row justify-center lg-tablet:justify-start lg-tablet:pl-[50px] gap-[150px] lg-tablet:gap-[100px] h-15"
+>
   <div class="flex flex-row gap-6 mt-5">
     <div class="linkedin-black-link-black-22 cursor-pointer"></div>
     <div class="facebook-square-link-black-22 cursor-pointer"></div>
@@ -15,10 +38,41 @@
   <div class="mt-5 paragraph-text neutrals-text-950">רחוב התע״ש 10, רמת גן</div>
   <div class="mt-5 paragraph-text neutrals-text-950">office@smarti.com</div>
   <div class="mt-5 paragraph-text neutrals-text-950">03-6549300 | 03-5228825</div>
+</div>
+
+<div class="gt-tablet:hidden flex flex-col justify-center mt-5 mb-8">
   <div
-    class="absolute neutrals-text-950 paragraph-text-medium"
-    style="right: 10px; top: 20px"
+    class="logo-big-h33 self-center"
+    (click)="navigateToPageWithoutAnchor(mainLink)"
+  ></div>
+  <div
+    class="footer-link-text dir-rtl white-text self-center mt-5"
+    smartiScrollAnchor="about"
+    (click)="navigateToPageWithAnchor(mainLink, 'about')"
   >
-    Ver {{ version }}
+    פתרונות
+  </div>
+  <div
+    class="footer-link-text dir-rtl white-text self-center mt-5"
+    smartiScrollAnchor="banner"
+    (click)="navigateToPageWithAnchor(mainLink, 'banner')"
+  >
+    אודות
+  </div>
+  <div
+    class="footer-link-text dir-rtl white-text self-center mt-5"
+    (click)="navigateToPageWithoutAnchor(contactLink)"
+  >
+    צרו קשר
+  </div>
+</div>
+<div class="gt-tablet:hidden flex flex-col justify-center bg-neutrals-20 mb-5">
+  <div class="mt-5 paragraph-text neutrals-text-950 self-center">03-6549300 | 03-5228825</div>
+  <div class="mt-5 paragraph-text neutrals-text-950 self-center">office@smarti.com</div>
+  <div class="mt-5 paragraph-text neutrals-text-950 self-center">רחוב התע״ש 10, רמת גן</div>
+  <div class="flex flex-row gap-6 mt-5 self-center mb-4">
+    <div class="linkedin-black-link-black-22 cursor-pointer"></div>
+    <div class="facebook-square-link-black-22 cursor-pointer"></div>
+    <div class="instagram-link-black-22 cursor-pointer"></div>
   </div>
 </div>
