--- a/src/shared/layout/landing-layout/questions-banner-layout/questions-banner-layout.component.html
+++ b/src/shared/layout/landing-layout/questions-banner-layout/questions-banner-layout.component.html
@@ -1,20 +1,21 @@
-<div class="question-banner-block flex flex-col items-center">
+<div class="question-banner-block h-[360px] flex flex-col items-center lt-lg-tablet:h-[460px]">
   <h3 class="medium text-center mt-12 white-text margin-rl-auto mb-0">לשאלות ומידע נוסף</h3>
-
-  <div class="flex gap-4 mt-8">
+  <div
+    class="flex flex-row gap-4 mt-8 w-full gt-desktop:justify-center lt-lg-tablet:flex-col lt-lg-tablet:w-[calc(100%-32px)]"
+  >
     <smarti-input-field
+      class="w-full gt-tablet:ml-4 gt-desktop:w-[536px]"
       [placeholder]="'טלפון*'"
-      [customWidth]="'536px'"
       [control]="phone"
     ></smarti-input-field>
     <smarti-input-field
+      class="w-full gt-desktop:w-[536px]"
       [placeholder]="'מייל*'"
-      [customWidth]="'536px'"
       [control]="email"
     ></smarti-input-field>
     <smarti-input-field
+      class="w-full gt-tablet:ml-4mr-4 gt-desktop:w-[536px]"
       [placeholder]="'שם מלא*'"
-      [customWidth]="'536px'"
       [control]="name"
     ></smarti-input-field>
   </div>
