--- a/src/shared/layout/landing-layout/run-business-layout/run-business-layout.component.html
+++ b/src/shared/layout/landing-layout/run-business-layout/run-business-layout.component.html
@@ -1,13 +1,23 @@
-<div class="run-business bg-white">
-  <div class="run-business__block flex gap-3 rounded-l">
-    <div class="run-business__block__left"></div>
-    <div class="run-business__block__right flex flex-col row-gap-8">
-      <h1 class="medium text-center white-text mb-0 mt-0 margin-rl-auto run-business__block__right__header">
-        נהלו את העסק שלכם חכם ומהיר
-      </h1>
-      <h4 class="medium mt-0 mb-6 text-center white-text margin-rl-auto run-business__block__right__description">
-        סמארטי כאן בממשק נגיש שעוזר לכם לנהל את סליקה הפנסיונית בצורה פשוטה ומהירה בכמה צעדים פשוטים
-      </h4>
+<div class="inline-block w-full h-[744px] lt-lg-tablet:h-[500px] lg-tablet:h-[640px] bg-white">
+  <div
+    class="gradient-rounded-background mb-0 mt-[160px] sm-desktop:mt-[130px] lt-lg-tablet:mt-10 lg-tablet:mt-20 mx-[140px] lg-tablet:mx-24 lt-lg-tablet:mx-8 h-[424px] sm-desktop:h-[484px] lg-tablet:h-[484px] flex flex-row gap-3 justify-between rounded-l"
+  >
+    <div class="lt-lg-tablet:hidden relative w-[613px] sm-desktop:w-[513px] h-[476px] lg-tablet:w-[413px]">
+      <div
+        class="application-image w-[613px] h-[476px] sm-desktop:w-[513px] sm-desktop:h-[396px] lg-tablet:w-[413px] lg-tablet:h-[313px] absolute left-[-80px] top-[-60px] sm-desktop:top-0 lg-tablet:top-[60px]"
+      ></div>
+    </div>
+    <div class="max-w-[1088px] mt-[55px] flex flex-col row-gap-8 mx-auto">
+      <div class="mx-auto">
+        <h1 class="medium text-center white-text mb-0 mt-0">נהלו את העסק</h1>
+        <h1 class="medium text-center white-text mb-0 mt-0">שלכם חכם ומהיר</h1>
+      </div>
+      <div class="mx-auto mb-6 lg-tablet:ml-8">
+        <h4 class="medium mt-0 mb-0 text-center white-text">
+          סמארטי כאן בממשק נגיש שעוזר לכם לנהל את סליקה הפנסיונית בצורה פשוטה
+        </h4>
+        <h4 class="medium mt-0 mb-0 text-center white-text">ומהירה בכמה צעדים פשוטים</h4>
+      </div>
       <smarti-button
         [text]="'הצטרפו עכשיו'"
         [typeClass]="'interaction'"
