--- a/src/shared/layout/landing-layout/start-day-with-smarti-layout/start-day-with-smarti-layout.component.html
+++ b/src/shared/layout/landing-layout/start-day-with-smarti-layout/start-day-with-smarti-layout.component.html
@@ -1,31 +1,41 @@
 <div class="mt-60">
   <div class="smarti-heading-text bright-turquoise-text-500">תתחיל את היום עם Smarti</div>
-  <div class="smarti-describing-text white-text">מגוון כלים ופתרונות יומיומיים שחוסכים לכם זמן וכסף</div>
+  <div class="smarti-describing-text my-0 mx-auto white-text">מגוון כלים ופתרונות יומיומיים שחוסכים לכם זמן וכסף</div>
 </div>
 
-<div class="start-day flex justify-between">
-  <div class="happy-user-img"></div>
-  <div class="flex flex-col gap-8 mt-8">
-    <div class="gap-12-5 flex">
+<div class="flex flex-row lt-lg-tablet:flex-col-reverse justify-between mt-[76px] mb-0 mx-auto max-w-fit">
+  <div class="happy-user-img w-[610px] h-[676px] mobile:w-[350px] mobile:h-[416px] mobile:mx-auto"></div>
+  <div class="flex flex-col gap-8 mt-8 lt-lg-tablet:mx-auto lt-lg-tablet:w-[calc(100%-32px)]">
+    <div class="gap-12-5 flex lt-lg-tablet:justify-end">
       <div>
         <h3 class="medium mb-0 mt-0 dir-rtl rose-text-base-500">שירות ללא פשרות</h3>
-        <h4 class="start-day__text mb-0 mt-4 white-text dir-rtl">יחס אישי לכל לקוח ומענה מקצועי ומהיר לכל שאלה</h4>
+        <h4
+          class="gt-sm-desktop:w-[674px] gt-lg-tablet:w-[490px] gt-tablet:w-[250px] mobile:max-w-[350px] h-[96px] mb-0 mt-4 white-text dir-rtl"
+        >
+          יחס אישי לכל לקוח ומענה מקצועי ומהיר לכל שאלה
+        </h4>
       </div>
       <div class="mask-group-97"></div>
     </div>
 
-    <div class="gap-12-5 flex">
+    <div class="gap-12-5 flex lt-lg-tablet:justify-end">
       <div>
         <h3 class="medium mb-0 mt-0 dir-rtl blue-text-base-600">שקיפות מלאה</h3>
-        <h4 class="start-day__text mb-0 mt-4 white-text dir-rtl">עבור תנועות תשלומי פנסיה ברמה החודשית / שנתית</h4>
+        <h4
+          class="gt-sm-desktop:w-[674px] gt-lg-tablet:w-[490px] gt-tablet:w-[250px] mobile:max-w-[350px] h-[96px] mb-0 mt-4 white-text dir-rtl"
+        >
+          עבור תנועות תשלומי פנסיה ברמה החודשית / שנתית
+        </h4>
       </div>
       <div class="mask-group-98"></div>
     </div>
 
-    <div class="gap-12-5 flex">
+    <div class="gap-12-5 flex lt-lg-tablet:justify-end">
       <div>
         <h3 class="medium mb-0 mt-0 dir-rtl pumpkin-text-400">דוחות</h3>
-        <h4 class="start-day__text mb-0 mt-4 white-text dir-rtl">
+        <h4
+          class="gt-sm-desktop:w-[674px] gt-lg-tablet:w-[490px] gt-tablet:w-[250px] gt-mobile:w-[460px] mobile:max-w-[350px] h-[96px] mb-0 mt-4 white-text dir-rtl"
+        >
           טופס הכנה 161, דוח הפקדות יתרות פיצויים של סוף שנה, קובץ תלם, טופס העברות כספים בין קופות, ועוד
         </h4>
       </div>
