add carousel feature to landing page

--- a/src/assets/styles/icons.scss
+++ b/src/assets/styles/icons.scss
@@ -339,3 +339,15 @@
   width: 24px;
   height: 24px;
 }
+
+.arrow-right-white-24 {
+  background: url("/assets/svg/arrow-right-white-24-icon.svg");
+  width: 24px;
+  height: 24px;
+}
+
+.arrow-left-white-24 {
+  background: url("/assets/svg/arrow-left-white-24-icon.svg");
+  width: 24px;
+  height: 24px;
+}
