--- a/src/shared/layout/landing-layout/landing-layout.component.html
+++ b/src/shared/layout/landing-layout/landing-layout.component.html
@@ -1,8 +1,8 @@
 <smarti-main-banner-layout #banner></smarti-main-banner-layout>
-<!--<smarti-about-layout #about></smarti-about-layout>-->
+<smarti-about-layout #about></smarti-about-layout>
 <smarti-start-day-with-smarti-layout></smarti-start-day-with-smarti-layout>
 <smarti-connect-now-layout></smarti-connect-now-layout>
-<!--<smarti-company-slider-layout></smarti-company-slider-layout>-->
+<smarti-company-carousel-layout></smarti-company-carousel-layout>
 <smarti-run-business-layout></smarti-run-business-layout>
 <smarti-employee-management-layout></smarti-employee-management-layout>
 <!--<smarti-blog-layout #blog></smarti-blog-layout>-->
