--- a/src/shared/layout/landing-layout/run-business-layout/run-business-layout.component.html
+++ b/src/shared/layout/landing-layout/run-business-layout/run-business-layout.component.html
@@ -1,13 +1,13 @@
-<div class="inline-block w-full h-[744px] lt-lg-tablet:h-[500px] lg-tablet:h-[640px] bg-white">
+<div class="inline-block w-full h-[744px] lg-tablet:h-[640px] tablet:h-[500px] mobile:h-[560px] bg-white">
   <div
-    class="gradient-rounded-background mb-0 mt-[160px] sm-desktop:mt-[130px] lt-lg-tablet:mt-10 lg-tablet:mt-20 mx-[140px] lg-tablet:mx-24 lt-lg-tablet:mx-8 h-[424px] sm-desktop:h-[484px] lg-tablet:h-[484px] flex flex-row gap-3 justify-between rounded-l"
+    class="gradient-rounded-background mb-0 mt-[160px] sm-desktop:mt-[130px] lt-lg-tablet:mt-10 lg-tablet:mt-20 mx-[140px] lg-tablet:mx-24 lt-lg-tablet:mx-8 h-[424px] sm-desktop:h-[484px] lg-tablet:h-[484px] mobile:h-[474px] flex flex-row gap-3 justify-between rounded-l"
   >
     <div class="lt-lg-tablet:hidden relative w-[613px] sm-desktop:w-[513px] h-[476px] lg-tablet:w-[413px]">
       <div
         class="application-image w-[613px] h-[476px] sm-desktop:w-[513px] sm-desktop:h-[396px] lg-tablet:w-[413px] lg-tablet:h-[313px] absolute left-[-80px] top-[-60px] sm-desktop:top-0 lg-tablet:top-[60px]"
       ></div>
     </div>
-    <div class="max-w-[1088px] mt-[55px] flex flex-col row-gap-8 mx-auto">
+    <div class="max-w-[1088px] mt-[55px] flex flex-col row-gap-8 mobile:gap-4 mx-auto">
       <div class="mx-auto">
         <h1 class="medium text-center white-text mb-0 mt-0">נהלו את העסק</h1>
         <h1 class="medium text-center white-text mb-0 mt-0">שלכם חכם ומהיר</h1>
