fix bugs with tailwind presets and config, clear error and warnings in console

--- a/src/shared/layout/landing-layout/about-layout/about-layout.component.html
+++ b/src/shared/layout/landing-layout/about-layout/about-layout.component.html
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div class="mt-12 about-carousel-custom-width:mx-auto mx-4 mb-0 flex flex-col gap-8 max-w-fit">
+<div class="mt-12 about-carousel-custom-width:mx-auto mx-4 mb-0 flex flex-col gap-8 max-w-fit overflow-x-hidden">
   <div class="flex flex-row justify-between">
     <div
       class="lt-lg-tablet:hidden about-carousel-custom-width:hidden arrow-left-white-24 !w-8 !h-8 !bg-cover"
