--- a/src/styles.scss
+++ b/src/styles.scss
@@ -131,3 +131,24 @@ router-outlet.router-flex + * {
 .overflow-initial {
   overflow: initial !important;
 }
+
+::-webkit-scrollbar {
+  width: 2px;
+  height: 3px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #171A21;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
