--- a/src/shared/layout/landing-layout/company-carousel-layout/company-carousel-layout.component.html
+++ b/src/shared/layout/landing-layout/company-carousel-layout/company-carousel-layout.component.html
@@ -2,7 +2,7 @@
   <div class="mt-40">
     <div class="smarti-heading-text bright-turquoise-text-500">הלקוחות שלנו</div>
   </div>
-  <div class="flex flex-col gap-8 mt-8 mx-8 mb-20">
+  <div class="flex flex-col gap-8 mt-8 mx-8 mb-20 overflow-x-hidden">
     <div class="flex flex-row justify-between">
       <div
         class="lt-lg-tablet:hidden arrow-left-white-24 !w-8 !h-8 !bg-cover"
