add login in registration process, add dialogs for last two registration steps, delete all unused code and fix bugs and warnings

--- a/src/assets/styles/dialogs.scss
+++ b/src/assets/styles/dialogs.scss
@@ -1,7 +1,7 @@
 tui-dialog{
   .t-content {
     background: $neutrals-20!important;
-    tui-input .t-content {
+    tui-input .t-content, tui-input-password .t-content {
       background: $white!important;
     }
   }
