--- a/src/features/registration-form/confirm-payment-form/confirm-payment-form.component.html
+++ b/src/features/registration-form/confirm-payment-form/confirm-payment-form.component.html
@@ -1,1 +1,59 @@
-<div></div>
+<div>
+  <div class="flex justify-center">
+    <smarti-progress-bar [currentUrl]="currentUrl"></smarti-progress-bar>
+  </div>
+  <h3 class="medium text-center mb-0 dir-rtl mt-6">
+    <div>הנתונים שהתקבלו לפי הקובץ שנקלט:</div>
+  </h3>
+  <div class="neutrals-text-950 text-center paragraph-text">
+    כעת יש לציין את תאריך הערך בו בוצע התשלום ולטעון את האסמכתא על התשלום
+  </div>
+  <div class="mt-4 mx-auto flex justify-around w-[658px] h-[80px] rounded-l bg-mint">
+    <div class="flex gap-2">
+      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">6230 ש״ח</div>
+      <div class="paragraph-text neutrals-text-950 self-center dir-rtl">סה״כ לתשלום:</div>
+    </div>
+    <div class="flex gap-2">
+      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">50</div>
+      <div class="paragraph-text neutrals-text-950 self-center dir-rtl">כמות עובדים:</div>
+    </div>
+  </div>
+  <div class="mt-8 mb-8"></div>
+  <div class="flex justify-center">
+    <smarti-input-file
+      [customWidth]="'536px'"
+      [customHeight]="'150px'"
+      [control]="uploadDocumentsForm.controls.files"
+      (fileUploaded)="fileUploaded($event)"
+    ></smarti-input-file>
+  </div>
+  <div
+    *ngIf="isDirectPayment; else smartiPaymentTemplate"
+    class="underline bright-turquoise-text-500 paragraph-text-medium text-center mt-8 cursor-pointer"
+    (click)="openDialogAccountForm(dialogTemplate)"
+  >
+    יש להזין את פרטי החשבון שממנו עבר התשלום
+  </div>
+  <div class="mt-10 flex justify-center">
+    <smarti-button
+      [typeClass]="'confirm'"
+      [customHeight]="'56px'"
+      [customWidth]="'147px'"
+      [text]="'אישור'"
+      (buttonClicked)="navigateToVerifyCode()"
+    ></smarti-button>
+  </div>
+</div>
+
+<ng-template #smartiPaymentTemplate>
+  <div class="neutrals-text-950 paragraph-text text-center mt-8">
+    הנני מאשר כי פרטי התשלום המוצגים נבדקו מול תוכנות השכר והינם תקינים.
+  </div>
+</ng-template>
+
+<ng-template
+  #dialogTemplate
+  let-observer
+>
+  <smarti-account-form-dialog [observer]="observer"></smarti-account-form-dialog>
+</ng-template>
