--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -12,7 +12,9 @@
         <div>להתחברות</div>
       </h1>
     </div>
-    <smarti-login-form></smarti-login-form>
+    <div class="w-[1080px] box-shadow-big bg-white rounded-l">
+      <smarti-login-form></smarti-login-form>
+    </div>
   </div>
   <smarti-contact-us-footer-layout></smarti-contact-us-footer-layout>
 </div>
