--- a/src/shared/tables/dashboard-download-documents-grid-table/dashboard-download-documents-grid-table.component.html
+++ b/src/shared/tables/dashboard-download-documents-grid-table/dashboard-download-documents-grid-table.component.html
@@ -29,8 +29,8 @@
           </div>
           <div>
             <smarti-input-checkbox
-              [checked]="item.isSelected"
               (changeEvent)="checkRow($event, index)"
+              [control]="item.isSelected"
             ></smarti-input-checkbox>
           </div>
         </div>
