--- a/src/shared/layout/registration-layout/verify-code/verify-code.component.html
+++ b/src/shared/layout/registration-layout/verify-code/verify-code.component.html
@@ -1,1 +1,7 @@
-<p>verify-code works!</p>
+<ng-template #verifyCodeFormTemplate>
+  <smarti-verify-email-form
+    [departmentId]="departmentId"
+    [token]="token"
+    [currentEmail]="currentEmail"
+  ></smarti-verify-email-form>
+</ng-template>
