--- a/src/shared/tables/dashboard-employers-table/dashboard-employers-table.component.html
+++ b/src/shared/tables/dashboard-employers-table/dashboard-employers-table.component.html
@@ -70,8 +70,8 @@
           </th>
           <th class="tui-table__th text-right caption-text neutrals-text-500 h-6 py-0 px-2 w-9">
             <smarti-input-checkbox
-              [checked]="isSelectedAll"
               (changeEvent)="checkAll($event)"
+              [control]="allSelectedValue"
             ></smarti-input-checkbox>
           </th>
         </tr>
@@ -113,7 +113,10 @@
             {{ item.employer_name }}
           </td>
           <td class="tui-table__td text-center paragraph-text neutrals-text-500 h-10 p-2 w-9 px-2">
-            <smarti-input-checkbox (changeEvent)="checkRow($event, index)"></smarti-input-checkbox>
+            <smarti-input-checkbox
+              [control]="item.isSelected"
+              (changeEvent)="checkRow($event, index)"
+            ></smarti-input-checkbox>
           </td>
         </tr>
       </tbody>
