--- a/src/features/registration-form/set-up-password-form/set-up-password-form.component.html
+++ b/src/features/registration-form/set-up-password-form/set-up-password-form.component.html
@@ -7,7 +7,7 @@
   </div>
   <h3 class="medium text-center">הגדרת סיסמא</h3>
   <div class="mt-[74px] regular-text neutrals-text-950 text-center dir-rtl">
-    יש להגדיר סיסמא לשם משתמש: name@email.com
+    יש להגדיר סיסמא לשם משתמש: {{ currentStorageData.email }}
   </div>
   <div class="mt-2 regular-text neutrals-text-950 text-center dir-rtl">
     הסיסמא צריכה להכיל 8 תווים, לפחות עוד אחת גדולה באנגלית וסימן.
