--- a/src/features/registration-form/registration-info-form/registration-info-form.component.html
+++ b/src/features/registration-form/registration-info-form/registration-info-form.component.html
@@ -13,7 +13,7 @@
   <div class="personal-info mt-8">
     <smarti-input-number
       [placeholder]="'ח.פ.*'"
-      [control]="personalInfoForm.controls.companyId"
+      [control]="personalInfoForm.controls.identifier"
       [maxLength]="9"
       [customWidth]="'536px'"
     ></smarti-input-number>
