--- a/src/features/registration-form/set-up-password-form/set-up-password-form.component.html
+++ b/src/features/registration-form/set-up-password-form/set-up-password-form.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="mt-[240px] mx-auto w-fit mb-16">
     <smarti-button
-      [text]="'הירשם'"
+      [text]="'הרשמה'"
       [typeClass]="'confirm'"
       (buttonClicked)="setPassword()"
       [disabled]="isDisabled"
