--- a/src/features/registration-form/upload-document/upload-document.component.html
+++ b/src/features/registration-form/upload-document/upload-document.component.html
@@ -17,6 +17,7 @@
       [customHeight]="'150px'"
       [control]="uploadDocumentsForm.controls.files"
       (fileUploaded)="fileUploaded($event)"
+      (fileRemoved)="removeFile($event)"
     ></smarti-input-file>
     <div
       *ngIf="!documentUploaded"
