--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -2,7 +2,7 @@
   <smarti-header-auth-layout
     [haveLeftBLock]="true"
     [leftBlockText]="'אין לך חשבון?'"
-    [leftBlockClickedText]="'התחברות'"
+    [leftBlockClickedText]="'הרשמה'"
     [redirectLink]="'/registration'"
   ></smarti-header-auth-layout>
   <div class="w-full-hd margin-0-auto">
