--- a/src/shared/dialog/download-sample-dialog/download-sample-dialog.component.html
+++ b/src/shared/dialog/download-sample-dialog/download-sample-dialog.component.html
@@ -3,7 +3,7 @@
   <div class="flex flex-col gap-10 items-center mt-28 mb-32">
     <div
       class="w-[674px] h-[112px] pl-7 pr-6 box-shadow-regular rounded-l flex flex-row justify-between hover:opacity-80 cursor-pointer"
-      (click)="downloadXlExample()"
+      (click)="downloadXlExample('xml')"
     >
       <div class="self-center download-arrow-down-inside-block-icon"></div>
       <div class="flex flex-row gap-7">
@@ -21,12 +21,12 @@
 
     <div
       class="w-[674px] h-[112px] pl-7 pr-6 box-shadow-regular rounded-l flex flex-row justify-between hover:opacity-80 cursor-pointer"
-      (click)="downloadXlExample()"
+      (click)="downloadXlExample('xlsx')"
     >
       <div class="self-center download-arrow-down-inside-block-icon"></div>
       <div class="flex flex-row gap-7">
         <div class="self-center w-[326px]">
-          <div class="medium-text neutrals-text-950 dir-rtl">קובץ xml לדוגמא</div>
+          <div class="medium-text neutrals-text-950 dir-rtl">קובץ תלם לדוגמא</div>
           <div class="paragraph-text neutrals-text-300 dir-rtl">
             יש באפשרותך להוריד קובץ לדוגמא ולטעון אותו לאחר מכן למערכת.
           </div>
