--- a/src/features/registration-form/transfer-money-form/transfer-money-form.component.html
+++ b/src/features/registration-form/transfer-money-form/transfer-money-form.component.html
@@ -10,11 +10,15 @@
   </h3>
   <div class="mt-12 flex justify-around w-[658px] h-[80px] rounded-l bg-mint">
     <div class="flex gap-2">
-      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">6230 ש״ח</div>
+      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">
+        {{ currentStorageData.total }}ש״ח
+      </div>
       <div class="paragraph-text neutrals-text-950 self-center dir-rtl">סה״כ סכום לתשלום לקופות:</div>
     </div>
     <div class="flex gap-2">
-      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">50</div>
+      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">
+        {{ currentStorageData.employeesCount }}
+      </div>
       <div class="paragraph-text neutrals-text-950 self-center dir-rtl">מספר העובדים:</div>
     </div>
   </div>
