--- a/src/features/registration-form/registration-info-form/registration-info-form.component.html
+++ b/src/features/registration-form/registration-info-form/registration-info-form.component.html
@@ -1,7 +1,5 @@
 <form
-  class="flex flex-col items-center mt-10"
-  [formGroup]="personalInfoForm"
->
+  class="flex flex-col items-center mt-10" [formGroup]="personalInfoForm">
   <h3 class="medium mt-10 mb-0 text-center neutrals-text-950 dir-rtl">צור חשבון!</h3>
   <div class="personal-info mt-8">
     <smarti-input-field
