--- a/src/features/registration-form/confirm-payment-form/confirm-payment-form.component.html
+++ b/src/features/registration-form/confirm-payment-form/confirm-payment-form.component.html
@@ -3,18 +3,22 @@
     <smarti-progress-bar [currentUrl]="currentUrl"></smarti-progress-bar>
   </div>
   <h3 class="medium text-center mb-0 dir-rtl mt-6">
-    <div>הנתונים שהתקבלו לפי הקובץ שנקלט:</div>
+    <div>כל הכבוד:</div>
   </h3>
   <div class="neutrals-text-950 text-center paragraph-text">
     כעת יש לציין את תאריך הערך בו בוצע התשלום ולטעון את האסמכתא על התשלום
   </div>
   <div class="mt-4 mx-auto flex justify-around w-[516px] h-[80px] rounded-l bg-mint">
     <div class="flex gap-2">
-      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">6230 ש״ח</div>
+      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">
+        {{ currentStorageData.total }}ש״ח
+      </div>
       <div class="paragraph-text neutrals-text-950 self-center dir-rtl">סה״כ לתשלום:</div>
     </div>
     <div class="flex gap-2">
-      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">50</div>
+      <div class="medium-text leading-10 text-center neutrals-text-950 self-center dir-rtl">
+        {{ currentStorageData.employeesCount }}
+      </div>
       <div class="paragraph-text neutrals-text-950 self-center dir-rtl">כמות עובדים:</div>
     </div>
   </div>
